--- a/api/package.json
+++ b/api/package.json
@@ -15,5 +15,13 @@
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "-": "^0.0.1",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1",
+    "nanoid": "^5.0.5"
   }
 }
